...
        cafeteriaNC.tabBarItem.accessibilityIdentifier = "tab.cafeteria"
        campusNC.tabBarItem = UITabBarItem(
            title: String(localized: "tabbar.campus"),
            image: UIImage(systemName: "square.grid.2x2.fill"),
            tag: 4
        )
        campusNC.tabBarItem.accessibilityIdentifier = "tab.campus"
        delegate = self
        setViewControllers(
            [shuttleNC, busNC, subwayNC, cafeteriaNC, campusNC],
            animated: true
        )
    }
...
